maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(estFaceMur()){ gauche(); return true}
                                       ^Escaper:4: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
    if(estFaceMur()){ gauche(); return true}
                                ^Escaper:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else{return false}
                ^Escaper:5: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
    else{return false}
         ^Escaper:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if(keepHandOnSideWall()){avance()}
                         ^